--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Vlad Emelianov <volshebnyi@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 numpy = "*"
+scipy = "*"
 termcolor = "*"
 pyaudio = "*"
 wave = "*"
